finished the project got everything to my liking with the exception of some spacing. might attempt to fix later but i believe project meets mvp

--- a/css/index.css
+++ b/css/index.css
@@ -64,18 +64,17 @@ h1, h2, h3, h4, h5 {
 .container {
 	width: 100%;
 	/* TB LR */
-	margin: 0 auto;
   }
   /* header */
   header {
 	  width: 100%;
 	  display: flex;
-	  justify-content: space-evenly;
   }
   header nav {
 	vertical-align: top;
-    margin-top: 35px;
-    width: 70%;
+    margin-top: 5%;
+    width: 100%;
+    justify-content: space-evenly;
   }
   header nav a {
 	font-size: 14px;
@@ -86,7 +85,7 @@ h1, h2, h3, h4, h5 {
 	text-decoration: underline;
   }
   header .logo {
-	margin-top: 25px;
+	margin-top: 5%;
   }
   /* cta */
   .cta {
@@ -166,14 +165,6 @@ h1 {
 	margin-right: 30px;
 	padding-top: 35px;
   }
-  .textcontent {
-	  border: 1px solid black;
-	  background: lavender;
-	  width: 50%;
-	  height: 230px;
-	  margin-bottom: 40px;
-	  padding: 10px;
-  }
   button {
 	background: white;
 	vertical-align: top;
@@ -183,22 +174,31 @@ h1 {
 	border: 1px solid black;
 	cursor: pointer;
   }
+  .top-content p{
+      padding: 2px;
+  }
   .bottomcontent {
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	align-items: stretch;
 	border-top: 3px solid black;
 	margin-top: 10px;
 	margin-right: 30px;
 	padding-top: 35px;
   }
+  .bottom-content p{
+      padding: 10px;
+  }
   .links{
       display: flex;
       justify-content: space-evenly;
   }
+  .long{
+      display: flex;
+      justify-content: center;
+  }
   @media(max-width: 800px){
     body{
-        background-color: aqua;
     }
     .circle{
         display: none;
@@ -220,6 +220,32 @@ h1 {
   }
   @media(max-width: 500px){
     body{
-        background-color: blue;
+    }
+    .cta-text h1{
+        font-size: 60px;
+    }
+    header nav .links{
+        flex-direction: column;
+        align-items: center;
+        padding: 5%;
+        margin: 20%;
+    }
+    header nav .links a{
+      padding-top: 10%;
+      padding-bottom: 10%;
+      font-size: 30px;
+      border-bottom: 2px solid black;
+    }
+    header nav{
+      display: flex;
+      justify-content: space-evenly;
+    }
+    .top-content{
+      align-content: center;
+      flex-direction: column;
+    }
+    .bottom-content{
+      align-content: center;
+      flex-direction: column;
     }
   }|
